# eidos-framework

./: .gitignore  README.md  data.txt  pyproject.toml
docs/: 00_INDEX.md  EIGEN_OMNIBUS_ARCHIVE.md  GRAND_UNIFICATION_AUDIT.md
docs/01_principia/: architecture.md  concepts.md  evolution_from_eigen.md  feature_coverage.md  manifesto.md  roadmap.md
docs/02_kernel_zero/: compilation.md  runtime_hal.md  symbolism.md
docs/03_system_services/: fs_protocol.md  governance.md  std_lib.md
docs/04_interfaces/: flight_sql_port.md  mcp_neuro_port.md  rest_port.md
docs/05_developer_experience/: cli_guide.md  ide_plugin.md
docs/06_extensions/: eidos_quant.md  integration_guides.md  universal_io.md
docs/appendix/: 42_APPENDIX_GLOSSARY.md  43_API_REFERENCE.md  44_DESIGN_PATTERNS.md  45_FAQ.md  46_TROUBLESHOOTING.md  47_PHYSICS_CONSTANTS.md  48_EIGEN_MANIFESTO.md  49_ROSETTA_TABLE.md
docs/cosmos/: 34_COSMOS_GENESIS.md  35_COSMOS_RENORMALIZATION.md  36_COSMOS_HARDWARE.md  37_COSMOS_BIOGENESIS.md  38_COSMOS_MULTIVERSE.md  39_COSMOS_OMEGA.md  40_COSMOS_ROADMAP.md  41_THE_ARCHIVES.md
docs/domains/: 17_DOMAIN_QUANTUM_FINANCE_I.md  18_DOMAIN_QUANTUM_FINANCE_II.md  19_DOMAIN_DATA_RELATIVITY_I.md  20_DOMAIN_DATA_RELATIVITY_II.md  21_DOMAIN_NEURAL_PHYSICS_I.md  22_DOMAIN_NEURAL_PHYSICS_II.md
docs/engineering/: 00_QUICKSTART.md  01_ARCHITECTURE_OVERVIEW.md  02_EXECUTION_MODEL.md  03_DATA_MODEL.md  04_ERROR_AND_RESOURCE.md  05_OBSERVABILITY.md  06_EXTENSIBILITY_GUIDE.md  07_SECURITY_MODEL.md  08_VERSIONING_AND_STABILITY.md  09_PERFORMANCE_MODEL.md
docs/examples/: COOKBOOK_01_DATA_ENGINEERING.md  COOKBOOK_02_QUANTUM_FINANCE.md  COOKBOOK_03_NEURAL_PHYSICS.md  COOKBOOK_04_SYSTEM_OPS.md  COOKBOOK_05_DISTRIBUTED.md  (+8 more)
examples/: concurrent_map_demo.py  eidos_algebra_demo.py  eidos_demo.py  eidos_evolution_demo.py  eidos_intelligence_demo.py  eidos_quant_demo.py  eigen_doctor.py  eigen_genesis_demo.py  eigen_multiverse_demo.py  eigen_neuromorphic_demo.py  eigen_quantum_demo.py  eigen_renormalization_demo.py  eigen_silicon_demo.py  eigen_standard_demo.py  http_quickstart.py  prove_eigen.py  prove_eigen_calculus.py  quant_benchmark.py  sql_server_demo.py  viz_demo.py
scripts/: run_tests.py
tests/: test_algebra.py  test_backend_dispatch.py  test_compiler_algebra.py  test_deployment.py  test_eidos_integration.py  test_flight_sql_realization.py  test_full_algebra.py  test_http_port.py  test_intelligence_realization.py  test_interfaces.py  test_io_adapters.py  test_map_concurrency.py  test_modern_config.py  test_modern_features.py  test_plugin_system.py  test_polars_backend.py  test_properties.py  test_rest_realization.py  test_snapshots.py  test_stream_algebra.py  test_studio_realization.py  test_triton_backend.py  test_zero_compiler.py  test_zero_dsl.py  verify_imports.py
(+99 files in other folders)
